[project]
name = "aiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai==1.12.1",
    "python-dotenv==1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiagent/"]

[tool.mypy]
exclude = "aiagent/calculator/"
strict = true
disallow_untyped_globals = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
src = ["aiagent/"]
exclude = [ "aiagent/calculator/" ]
line-length = 80

[tool.ruff.lint]
extend-select = ["D", "I001", "I002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "debugpy>=1.8.20",
    "mypy>=1.20.0",
    "ruff>=0.15.10",
]
